test/conformance/chainsaw/generate/validation/clusterpolicy/permissions/no-permission/chainsaw-step-02-apply-1-1.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/component: background-controller
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/part-of: kyverno
  name: kyverno:background-controller:temp
rules:
- apiGroups:
  - '*'
  resources:
  - serviceaccounts
  verbs:
  - create
  - update
  - patch
  - delete
  - get
  - list
