test/conformance/chainsaw/generate/validation/clusterpolicy/permissions/no-permission/04-delete.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: delete
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: kyverno.io/v1
      kind: ClusterPolicy
      name: cpol-validate-create-sa-permission
