test/conformance/chainsaw/generate/validation/clusterpolicy/permissions/no-permission/05-pass.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: pass
spec:
  timeouts: {}
  try:
  - apply:
      file: policy-with-var.yaml
  - assert:
      file: policy-assert.yaml
