test/conformance/chainsaw/generate/validation/clusterpolicy/permissions/no-permission/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: no-permission
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-validate-create-sa-permission
  - name: step-04
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: cpol-validate-create-sa-permission
  - name: step-05
    try:
    - apply:
        file: policy-with-var.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-validate-create-sa-permission
